@@ -1,3 +1,4 @@
+Version 7 	 2010-07-10 	 Script to refresh redmine cache 
 Version 6 	 2010-07-04 	 Delete Cookies in create_osum_profile.py 
 Version 5 	 2010-06-23 	 Script to create OSUM profile 
 Version 4 	 2010-06-23 	 Added ps_mem 
